MODBULKOPS-548 - On ECS, local reference data not found due to the wrong tenant (#441)
* MODBULKOPS-548 Added cache for tenants